2002-08-26  ??  <nobody@ibm.com>

	* src/option.cpp (Option): Fix bad logic with drive letters in -d
	for Windows - bug 3238.

2002-08-26  Eric Blake  <ebb9@email.byu.edu>

	* src/symbol.cpp (BlockSymbol):
	* src/body.cpp (ProcessTryStatement),
	(ProcessSynchronizedStatement): Fix bug when multiple synchronized
	statements appear in static method with no params - bug 3205.
	* src/decl.cpp: Fix typo in last commit.

2002-08-26  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessTypeHeader, ProcessInterface),
	(ProcessTypeHeaders): Fix inner classes subclassing something in
	the same .java file - bug 3202.
	* src/scanner.cpp (ScanSlashComment): Comment dead code.
	* src/stream.h (LAST_CHARACTER_NOT_NEWLINE): New warning.
	* src/stream.cpp (ProcessInputAscii, ProcessInputUnicode): Give
	pedantic warning if file doesn't end in \n (or its variants).

2002-08-22  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp (ScanSlashComment): Revert change that gave
	error on //EOF, based on Sun bug 4386773.

2002-08-21  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (StripNops): Minor bytecode optimization -
	assignment conversion to superinterfaces was emitting useless
	checkcast.

2002-08-15  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp:
	* src/error.h (TYPE_NOT_PRIMITIVE, TYPE_NOT_VALID_FOR_SWITCH),
	(TYPE_NOT_CONVERTIBLE_TO_SWITCH_TYPE): Delete.
	(TYPE_NOT_*): Improve wording.
	* src/body.cpp: Use improved error wording.
	(ProcessSwitchStatement): Improve handling of sub-integer cases.
	(ProcessThisCall, ProcessSuperCall): Detect void arguments to
	constructors.
	* src/semantic.h (BinaryNumericPromotion): New method, to collapse
	common code from existing 3 overloads.
	* src/expr.cpp (Process*): General cleanup: detect more cases of
	void subexpressions, don't cause errors in outer expression if
	inner one was bad, use improved error wording, improve formatting.
	(ProcessEQUAL_EQUAL, ProcessNOT_EQUAL): Fix